dz3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-dz3-service
spec:
  selector:
    app: otus-dz3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
